--- a/pymaceuticals_starter (5).ipynb
+++ b/pymaceuticals_starter (5).ipynb
@@ -2103,7 +2103,7 @@
     "# 3 Observations\n",
     "# 1 - Heavier the mouse, higher the tumor weight\n",
     "#2 For the entirety of this data it was very consistant and there was only 1x outlier showing very little variations in the medication\n",
-    "#3 Capomulin has the most efficacy with decreasing tumor size"
+    "#3 Infubinol and Ceftamin have the lowest final tumor masses"
    ]
   }
  ],
